<resources>
    <string name="app_name">TWer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="rating_string">評分： </string>
    <string name="price_string">價位： </string>
    <string name="name_string">名稱： </string>
    <string name="address_string">地址： </string>
    <string name="phone_string">電話： </string>
    <string name="website_string">網站： </string>
    <string name="opening_hours_string">營業時間： </string>

    <string-array name="county_names">
        <item>keelung</item>
        <item>newtaipeicity</item>
        <item>taipei</item>
        <item>ilan</item>
        <item>taoyuan</item>
        <item>hsinchu</item>
        <item>miaoli</item>
        <item>taichung</item>
        <item>nantou</item>
        <item>changhua</item>
        <item>yunlin</item>
        <item>chiayi</item>
        <item>tainan</item>
        <item>kaohsiung</item>
        <item>pingtung</item>
        <item>hualien</item>
        <item>taitung</item>
    </string-array>
</resources>
