<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment"
    android:background="#FFF8DC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="景點資訊"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/favorite"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="20dp"
                />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:src="@drawable/ic_schedule_add"
                android:id="@+id/schedule_add"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/search_image_border"
            >

            <ImageView
                android:id="@+id/search_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:scaleType="centerCrop"/>

            <com.github.ybq.android.spinkit.SpinKitView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/SpinKitView.DoubleBounce"
                android:layout_centerInParent="true"
                app:SpinKit_Color="@color/colorAccent"
                android:id="@+id/search_image_progress"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="查無相片"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_centerInParent="true"
                android:visibility="gone"
                android:id="@+id/no_photo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:background="#9000"
                android:text="瀏覽相片"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_string"
                android:textSize="20sp"
                android:textColor="#000000"
                android:id="@+id/name_title"
                />

            <TextView
                android:id="@+id/search_result_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/name_title"
                android:textSize="20sp"
                android:textColor="#000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_string"
                android:textSize="20sp"
                android:textColor="#000000"
                android:id="@+id/address_title"/>

            <TextView
                android:id="@+id/search_result_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/address_title"
                android:textSize="20sp"
                android:textColor="#000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_string"
                android:textSize="20sp"
                android:textColor="#000000"
                android:id="@+id/phone_title"/>

            <TextView
                android:id="@+id/search_result_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/phone_title"
                android:textSize="20sp"
                android:textColor="#000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website_string"
                android:textSize="20sp"
                android:textColor="#000000"
                android:id="@+id/website_title"/>

            <TextView
                android:id="@+id/search_result_website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/website_title"
                android:textSize="20sp"
                android:textColor="#000000"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/rating_string"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <RatingBar
                android:id="@+id/ratingBar"
                style="@style/PlaceRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:numStars="5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_string"
                android:textSize="20sp"
                android:textColor="#000000"/>

            <RatingBar
                android:id="@+id/priceRatingBar"
                style="@style/PriceRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:numStars="5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="查無資料"
                android:textSize="20sp"
                android:textColor="#000"
                android:visibility="gone"
                android:id="@+id/no_price"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opening_hours_string"
                android:textSize="20sp"
                android:textColor="#000000"
                android:id="@+id/opening_hours_title"/>

            <TextView
                android:id="@+id/search_result_opening_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/opening_hours_title"
                android:textSize="20sp"
                android:textColor="#000000"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>